# inverse_design

./: .gitignore  README.md  pyproject.toml
src/inverse_design/: abc.py  abc_base.py  abc_precomputed.py  abc_with_model.py  analyze_results.py  bdm.py  cell.py  config.py  evaluate.py  example.py  example_precomputed.py  example_with_model.py  gillespie.py  grid.py  location.py  metrics.py  run_simulations.py  utils.py  vis.py
src/inverse_design/abc/: abc_base.py  abc_precomputed.py  abc_with_model.py
src/inverse_design/analyze/: ABCMetricsComparison.py  abc_analysis.py  analyze_aggregated_results.py  analyze_results.py  analyze_seed_results.py  analyze_utils.py  calculate_exp_data.py  calculate_symmetry.py  cell_metrics.py  evaluate.py  file_utils.py  metrics_config.py  parameter_config.py  population_metrics.py  sandbox.py  save_aggregated_results.py  sensitivity_analysis.py  sensitivity_plot.py  source_metrics.py  spatial_metrics.py  temporal_metrics.py
src/inverse_design/common/: enum.py
src/inverse_design/conf/: abc.yaml  bdm.yaml  config.py  config.yaml
src/inverse_design/examples/: example_precomputed.py  run_simulations.py
src/inverse_design/gui/: __init__.py  abc_gui.py  abc_precomputed_gui.py  metrics_vis_window.py  param_vis_window.py  parameter_selection_dialog.py  run_gui.py
src/inverse_design/inputs/: create_input_files.py
src/inverse_design/metrics/: metrics.py
src/inverse_design/models/: arcade.py  bdm.py  location.py  model_base.py  models.py  parameters.py
src/inverse_design/rf/: abc_rf_readme.md  abc_smc_rf.py  abc_smc_rf_arcade.py  (+8 more)
(+12 files in other folders)
